src/objects/Client_History__c.object
<CustomObject>
    <fields>
        <fullName>Amount_of_loan__c</fullName>
        <label>Amount of loan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipName>Historical_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delinquent_Portfolio__c</fullName>
        <description>Amount of overdue loan principal / Total original value of all outstanding loans</description>
        <inlineHelpText>* This should consider loans in Active in good standing and Active in bad standing states.
* Written-off loans should not be included.
* Closed- rescheduled loans should not be included.</inlineHelpText>
        <label>Delinquent Portfolio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Paid__c</fullName>
        <label>Interest Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Cycle_Number__c</fullName>
        <label>Loan Cycle Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Product</label>
        <referenceTo>Loan_Product__c</referenceTo>
        <relationshipLabel>Client History</relationshipLabel>
        <relationshipName>Client_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MFI_Joining_Date__c</fullName>
        <label>MFI Joining Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Meetings_Attended__c</fullName>
        <description>Number of meetings where the client attendance is equal to &quot;Present&quot; and “Late”</description>
        <inlineHelpText>Number of meetings where the client attendance is equal to &quot;Present&quot; and “Late”</inlineHelpText>
        <label>Number of Meetings Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Meetings_Missed__c</fullName>
        <description>Number of meetings where the client attendance has a value equal to &quot;Absent&quot;, &quot;Approved leave&quot;</description>
        <inlineHelpText>Number of meetings where the client attendance has a value equal to &quot;Absent&quot;, &quot;Approved leave&quot;</inlineHelpText>
        <label>Number of Meetings Missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Missed_Payments__c</fullName>
        <label>Number of Missed Payments</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Paid__c</fullName>
        <label>Total Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Active_Loans__c</fullName>
        <label>Total No of Active Loans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Payments__c</fullName>
        <label>Total Number of Payments</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Savings__c</fullName>
        <description>Sum of account balances of all mandatory and voluntary savings accounts.
This should include all the savings accounts of the client.</description>
        <inlineHelpText>Sum of account balances of all mandatory and voluntary savings accounts.
This should include all the savings accounts of the client.</inlineHelpText>
        <label>Total Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Client History</label>
    <nameField>
        <displayFormat>HDI-{0000000000}</displayFormat>
        <label>Historical Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>